--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
   overflow-x: hidden;
   font-family: "Montserrat", sans-serif;
 }
-.search-field {
+/* .search-field {
   border: none;
   border-radius: 50px;
   padding: 5px;
@@ -11,8 +11,8 @@ body {
 .search-field:hover {
   outline: none;
   border: none;
-}
-.search-box {
+} */
+/* .search-box {
   border: 1px solid rgb(3, 118, 211);
   width: 26%;
   border-radius: 5px;
@@ -24,7 +24,8 @@ body {
   padding: 10px 50px;
   border-radius: 25px;
   margin-left: 20px;
-}
+} */
+
 #all-products {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -36,30 +37,35 @@ body {
   justify-content: center;
 }
 .single-product {
+  border: 1px solid cyan;
+  border-radius: 5px;
+  margin-right: 30px;
+  margin-bottom: 30px;
   padding: 10px;
+
   transition: 0.6s;
 }
 .single-product:hover {
   box-shadow: 4px 4px 7px gray;
   border-radius: 10px;
-  border: 1px solid cyan;
+  border: 1px solid darkgoldenrod;
 }
 .product-image {
   width: 150px;
   height: 150px;
 }
 .cart {
-  width: 350px;
+  width: 360px;
   /* border: 1px solid green; */
   padding: 10px;
   box-shadow: 10px 10px 20px gray;
   border-radius: 5px;
-  margin-right: 30px;
+  margin-right: 10px;
   position: fixed;
 }
-.cart-main {
+/* .cart-main {
   padding-right: 30px;
-}
+} */
 @media only screen and (max-width: 768px) {
   #all-products {
     display: grid;
