--- a/css/style.css
+++ b/css/style.css
@@ -63,9 +63,9 @@ body {
   margin-right: 10px;
   position: fixed;
 }
-/* .cart-main {
+.cart-main {
   padding-right: 30px;
-} */
+}
 @media only screen and (max-width: 768px) {
   #all-products {
     display: grid;
