--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ body {
   box-shadow: 10px 10px 20px gray;
   border-radius: 5px;
   margin-right: 10px;
-  position: fixed;
+  /* position: fixed; */
 }
 .cart-main {
   padding-right: 30px;
